--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,26 @@
   box-sizing: border-box;
 }
 
+.App{
+  background-color: var(--off-white);
+  position: relative;
+  min-height: 100vh;
+  z-index: 1;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images_and_icons/leather.png');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.1;
+  z-index: 0;
+}
+
 body {
   background-color: var(--off-white);
   color: var(--charcoal);
@@ -33,6 +53,7 @@ header{
   background-color: var(--deep-plum);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   padding: 1rem 2rem;
+  width: 100%;
 }
 
 /*Heading Styles*/
