--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -77,21 +77,6 @@
     animation: breathe 7s ease-in-out infinite;
 }
 
-/*playing animation for spotify icon - i think its like a glow*/
-@keyframes breathe{
-    0%{
-        transform: scale(1);
-        box-shadow: 0 0 0 rgba(255, 255, 255, 0);
-    }
-    50%{
-        transform: scale(1.05);
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-    }
-    100%{
-        transform: scale(1);
-        box-shadow: 0 0 0 rgba(255, 255, 255, 0);
-    }
-}
 
 /* Responsive Design */
 @media (max-width: 768px){
@@ -100,6 +85,7 @@
         align-items: center;
         text-align: center;
         gap: 2rem;
+        flex-wrap: wrap;
     }
     .footer-left, .footer-right, .footer-center{
         max-width: 100%;
