--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-.App{
+.app{
   background-color: var(--off-white);
   position: relative;
   min-height: 100vh;
@@ -26,6 +26,11 @@
   background-position: center;
   opacity: 0.1;
   z-index: 0;
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
 }
 
 body {
