--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -14,3 +14,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.app{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
