--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,14 +8,47 @@
   box-sizing: border-box;
 }
 
-.app{
+/*.app{
   background-color: var(--off-white);
+  background-image: 
+  linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),
+  url('../images_and_icons/leather.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   position: relative;
   min-height: 100vh;
   z-index: 1;
+}*/
+
+.app {
+  background-color: var(--off-white);
+  position: relative;
+  min-height: 100vh;
 }
 
-.background-image {
+.app::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images_and_icons/leather.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+  opacity: 0.3; /* Only affects the background image */
+  z-index: 0;
+  pointer-events: none;
+}
+
+/*.background-image {
   position: fixed;
   top: 0;
   left: 0;
@@ -26,7 +59,7 @@
   background-position: center;
   opacity: 0.1;
   z-index: 0;
-}
+}*/
 
 html, body, #root {
   height: 100%;
@@ -51,6 +84,7 @@ p {
   margin: 0 auto;
   width: 100%;
   padding: 0 2rem;
+  z-index: 1;
 }
 
 
@@ -59,7 +93,16 @@ header{
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   padding: 1rem 2rem;
   width: 100%;
+  position: relative;
+  z-index: 2;
 }
+
+@media (prefers-reduced-motion: reduce) {
+  .spotify-player.playing {
+    animation: none;
+  }
+}
+
 
 /*Heading Styles*/
 h1{
