--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,11 +1,15 @@
 .card{
-    background-color: var(--light-violet);
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: inherit;
+
     border-radius: 18px;
-    padding-top: 29px;
-    padding-bottom: 29px;
-    padding-left: 19px;
-    padding-right: 19px;
-    box-shadow: 0 14px 12px rgba(0,0,0,0.25);
+    overflow: hidden;
+    
+    background-color: var(--light-violet);
+    box-shadow: outset 0 0 0 3px var(--charcoal);
+
     transition: transform var(--transition-duration), 
                 box-shadow var(--transition-duration);
 }
@@ -13,4 +17,55 @@
 .card:hover{
     transform: scale(1.03);
     box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+}
+
+.card img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card *
+{
+    text-decoration: none;
+}
+
+.card-content{
+    padding: var(--space-md);
+    gap: var(--space-sm);
+    display: flex;
+    flex-direction: column;
+}
+
+.card-content h3{
+    font-size: 1.5rem;
+    color: var(--off-white);
+}
+
+.card-content p{
+    font-size: 0.9rem;
+    color: var(--off-white);
+    line-height: 1.4;
+}
+
+.tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .4rem;
+    margin-top: auto;
+}
+
+.tags span{
+    background-color: var(--terracotta);
+    color: var(--off-white);
+    padding: 0.3rem 0.6rem;
+    border-radius: var(--border-radius);
+    font-size: 0.75rem;
+    font-weight: var(--weight-semibold);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .project-card {
+    transition: none;
+  }
 }
