--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -16,7 +16,13 @@
 
 .card:hover{
     transform: scale(1.03);
-    box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+    box-shadow: 0 24px 48px rgba(0,0,0,0.08);
+}
+
+.project-image{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
 }
 
 .card img{
@@ -40,6 +46,7 @@
 .card-content h3{
     font-size: 1.5rem;
     color: var(--off-white);
+    font-weight: 600;
 }
 
 .card-content p{
